--- a/TradeArcher/Styles/Styles.xaml
+++ b/TradeArcher/Styles/Styles.xaml
@@ -51,4 +51,37 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="GainTextStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Green" />
+    </Style>
+    <Style x:Key="LossTextStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Red" />
+    </Style>
+    <Style x:Key="WrapPanelStatsItemStyle" TargetType="StackPanel">
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="Black" />
+        <Setter Property="Margin" Value="0" />
+        <Setter Property="MinWidth" Value="25" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+    </Style>
+    <Style x:Key="TableHeaderTextStyle" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <Style x:Key="ToolBarTextStyle" TargetType="TextBlock">
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="VerticalAlignment" Value="Top" />
+        <Setter Property="Margin" Value="5,3,3,0" />
+    </Style>
+
+    <Style x:Key="ToolBarComboBoxStyle" TargetType="ComboBox">
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Padding" Value="3,0, 0, 0" />
+        <Setter Property="Height" Value="26" />
+        <Setter Property="MinWidth" Value="200" />
+        <Setter Property="MaxWidth" Value="300" />
+    </Style>
 </ResourceDictionary>
